log/REINFORCEMENT_2017-11-23 00:45:11.702913/logfile.log
Python 3.6.3 |Anaconda, Inc.| (default, Oct 13 2017, 12:02:49) 
Type 'copyright', 'credits' or 'license' for more information
IPython 6.1.0 -- An enhanced Interactive Python. Type '?' for help.
Python 3.6.3 |Anaconda, Inc.| (default, Oct 13 2017, 12:02:49) 
[GCC 7.2.0] on linux
Out[2]: float
Out[4]: 
Variable containing:

Columns 0 to 9 
 0.7378  0.7161  0.7378  0.7161  0.7161  0.7378  0.7378  0.7161  0.7161  0.7161
 0.7378  0.7161  0.7378  0.7161  0.7161  0.7378  0.7378  0.7161  0.7161  0.7161
 0.7378  0.7161  0.7378  0.7161  0.7161  0.7378  0.7378  0.7161  0.7161  0.7161
 0.7378  0.7161  0.7378  0.7161  0.7161  0.7378  0.7378  0.7161  0.7161  0.7161
 0.7378  0.7161  0.7378  0.7161  0.7161  0.7378  0.7378  0.7161  0.7161  0.7161
 0.7378  0.7161  0.7378  0.7161  0.7161  0.7378  0.7378  0.7161  0.7161  0.7161
 0.7378  0.7161  0.7378  0.7161  0.7161  0.7378  0.7378  0.7161  0.7161  0.7161
 0.7378  0.7161  0.7378  0.7161  0.7161  0.7378  0.7378  0.7161  0.7161  0.7161
 0.7378  0.7161  0.7378  0.7161  0.7161  0.7378  0.7378  0.7161  0.7161  0.7161
 0.7378  0.7161  0.7378  0.7161  0.7161  0.7378  0.7378  0.7161  0.7161  0.7161
 0.7378  0.7161  0.7378  0.7161  0.7161  0.7378  0.7378  0.7161  0.7161  0.7161
 0.7378  0.7161  0.7378  0.7161  0.7161  0.7378  0.7378  0.7161  0.7161  0.7161
 0.7378  0.7161  0.7378  0.7161  0.7161  0.7378  0.7378  0.7161  0.7161  0.7161
 0.7378  0.7161  0.7378  0.7161  0.7161  0.7378  0.7378  0.7161  0.7161  0.7161
 0.7378  0.7161  0.7378  0.7161  0.7161  0.7378  0.7378  0.7161  0.7161  0.7161
 0.7378  0.7161  0.7378  0.7161  0.7161  0.7378  0.7378  0.7161  0.7161  0.7161
 0.7378  0.7161  0.7378  0.7161  0.7161  0.7378  0.7378  0.7161  0.7161  0.7161
 0.7378  0.7161  0.7378  0.7161  0.7161  0.7378  0.7378  0.7161  0.7161  0.7161

Columns 10 to 17 
 0.7161  0.7161  0.7161  0.7161  0.7161  0.7378  0.7161  0.7378
 0.7161  0.7161  0.7161  0.7161  0.7161  0.7378  0.7161  0.7378
 0.7161  0.7161  0.7161  0.7161  0.7161  0.7378  0.7161  0.7378
 0.7161  0.7161  0.7161  0.7161  0.7161  0.7378  0.7161  0.7378
 0.7161  0.7161  0.7161  0.7161  0.7161  0.7378  0.7161  0.7378
 0.7161  0.7161  0.7161  0.7161  0.7161  0.7378  0.7161  0.7378
 0.7161  0.7161  0.7161  0.7161  0.7161  0.7378  0.7161  0.7378
 0.7161  0.7161  0.7161  0.7161  0.7161  0.7378  0.7161  0.7378
 0.7161  0.7161  0.7161  0.7161  0.7161  0.7378  0.7161  0.7378
 0.7161  0.7161  0.7161  0.7161  0.7161  0.7378  0.7161  0.7378
 0.7161  0.7161  0.7161  0.7161  0.7161  0.7378  0.7161  0.7378
 0.7161  0.7161  0.7161  0.7161  0.7161  0.7378  0.7161  0.7378
 0.7161  0.7161  0.7161  0.7161  0.7161  0.7378  0.7161  0.7378
 0.7161  0.7161  0.7161  0.7161  0.7161  0.7378  0.7161  0.7378
 0.7161  0.7161  0.7161  0.7161  0.7161  0.7378  0.7161  0.7378
 0.7161  0.7161  0.7161  0.7161  0.7161  0.7378  0.7161  0.7378
 0.7161  0.7161  0.7161  0.7161  0.7161  0.7378  0.7161  0.7378
 0.7161  0.7161  0.7161  0.7161  0.7161  0.7378  0.7161  0.7378
[torch.cuda.FloatTensor of size 18x18 (GPU 0)]
Out[7]: 
Variable containing:
 0.4781  0.4887
 0.4781  0.4887
 0.4781  0.4887
 0.4781  0.4887
 0.4781  0.4887
 0.4781  0.4887
 0.4781  0.4887
 0.4781  0.4887
 0.4781  0.4887
 0.4781  0.4887
 0.4781  0.4887
 0.4781  0.4887
 0.4781  0.4887
 0.4781  0.4887
 0.4781  0.4887
 0.4781  0.4887
 0.4781  0.4887
 0.4781  0.4887
[torch.cuda.FloatTensor of size 18x2 (GPU 0)]
Out[8]: [0, 1, 0, 1, 1, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 0]
Out[9]: 
Variable containing:

Columns 0 to 9 
 0.4781  0.4887  0.4781  0.4887  0.4887  0.4781  0.4781  0.4887  0.4887  0.4887
 0.4781  0.4887  0.4781  0.4887  0.4887  0.4781  0.4781  0.4887  0.4887  0.4887
 0.4781  0.4887  0.4781  0.4887  0.4887  0.4781  0.4781  0.4887  0.4887  0.4887
 0.4781  0.4887  0.4781  0.4887  0.4887  0.4781  0.4781  0.4887  0.4887  0.4887
 0.4781  0.4887  0.4781  0.4887  0.4887  0.4781  0.4781  0.4887  0.4887  0.4887
 0.4781  0.4887  0.4781  0.4887  0.4887  0.4781  0.4781  0.4887  0.4887  0.4887
 0.4781  0.4887  0.4781  0.4887  0.4887  0.4781  0.4781  0.4887  0.4887  0.4887
 0.4781  0.4887  0.4781  0.4887  0.4887  0.4781  0.4781  0.4887  0.4887  0.4887
 0.4781  0.4887  0.4781  0.4887  0.4887  0.4781  0.4781  0.4887  0.4887  0.4887
 0.4781  0.4887  0.4781  0.4887  0.4887  0.4781  0.4781  0.4887  0.4887  0.4887
 0.4781  0.4887  0.4781  0.4887  0.4887  0.4781  0.4781  0.4887  0.4887  0.4887
 0.4781  0.4887  0.4781  0.4887  0.4887  0.4781  0.4781  0.4887  0.4887  0.4887
 0.4781  0.4887  0.4781  0.4887  0.4887  0.4781  0.4781  0.4887  0.4887  0.4887
 0.4781  0.4887  0.4781  0.4887  0.4887  0.4781  0.4781  0.4887  0.4887  0.4887
 0.4781  0.4887  0.4781  0.4887  0.4887  0.4781  0.4781  0.4887  0.4887  0.4887
 0.4781  0.4887  0.4781  0.4887  0.4887  0.4781  0.4781  0.4887  0.4887  0.4887
 0.4781  0.4887  0.4781  0.4887  0.4887  0.4781  0.4781  0.4887  0.4887  0.4887
 0.4781  0.4887  0.4781  0.4887  0.4887  0.4781  0.4781  0.4887  0.4887  0.4887

Columns 10 to 17 
 0.4887  0.4887  0.4887  0.4887  0.4887  0.4781  0.4887  0.4781
 0.4887  0.4887  0.4887  0.4887  0.4887  0.4781  0.4887  0.4781
 0.4887  0.4887  0.4887  0.4887  0.4887  0.4781  0.4887  0.4781
 0.4887  0.4887  0.4887  0.4887  0.4887  0.4781  0.4887  0.4781
 0.4887  0.4887  0.4887  0.4887  0.4887  0.4781  0.4887  0.4781
 0.4887  0.4887  0.4887  0.4887  0.4887  0.4781  0.4887  0.4781
 0.4887  0.4887  0.4887  0.4887  0.4887  0.4781  0.4887  0.4781
 0.4887  0.4887  0.4887  0.4887  0.4887  0.4781  0.4887  0.4781
 0.4887  0.4887  0.4887  0.4887  0.4887  0.4781  0.4887  0.4781
 0.4887  0.4887  0.4887  0.4887  0.4887  0.4781  0.4887  0.4781
 0.4887  0.4887  0.4887  0.4887  0.4887  0.4781  0.4887  0.4781
 0.4887  0.4887  0.4887  0.4887  0.4887  0.4781  0.4887  0.4781
 0.4887  0.4887  0.4887  0.4887  0.4887  0.4781  0.4887  0.4781
 0.4887  0.4887  0.4887  0.4887  0.4887  0.4781  0.4887  0.4781
 0.4887  0.4887  0.4887  0.4887  0.4887  0.4781  0.4887  0.4781
 0.4887  0.4887  0.4887  0.4887  0.4887  0.4781  0.4887  0.4781
 0.4887  0.4887  0.4887  0.4887  0.4887  0.4781  0.4887  0.4781
 0.4887  0.4887  0.4887  0.4887  0.4887  0.4781  0.4887  0.4781
[torch.cuda.FloatTensor of size 18x18 (GPU 0)]
Out[10]: 
Variable containing:
 0.4781  0.4887
 0.4781  0.4887
 0.4781  0.4887
 0.4781  0.4887
 0.4781  0.4887
 0.4781  0.4887
 0.4781  0.4887
 0.4781  0.4887
 0.4781  0.4887
 0.4781  0.4887
 0.4781  0.4887
 0.4781  0.4887
 0.4781  0.4887
 0.4781  0.4887
 0.4781  0.4887
 0.4781  0.4887
 0.4781  0.4887
 0.4781  0.4887
[torch.cuda.FloatTensor of size 18x2 (GPU 0)]
  File "<ipython-input-11-9cea5edb62c4>", line 1
    q_value[,[0,1]]
            ^
SyntaxError: invalid syntax

Out[13]: 
Variable containing:
 0.4781
 0.4781
 0.4781
 0.4781
 0.4781
 0.4781
 0.4781
 0.4781
 0.4781
 0.4781
 0.4781
 0.4781
 0.4781
 0.4781
 0.4781
 0.4781
 0.4781
 0.4781
[torch.cuda.FloatTensor of size 18 (GPU 0)]
Out[19]: torch.Size([18, 2])
Out[23]: 
[Variable containing:
  0.4781
 [torch.cuda.FloatTensor of size 1 (GPU 0)], Variable containing:
  0.4887
 [torch.cuda.FloatTensor of size 1 (GPU 0)], Variable containing:
  0.4781
 [torch.cuda.FloatTensor of size 1 (GPU 0)], Variable containing:
  0.4887
 [torch.cuda.FloatTensor of size 1 (GPU 0)], Variable containing:
  0.4887
 [torch.cuda.FloatTensor of size 1 (GPU 0)], Variable containing:
  0.4781
 [torch.cuda.FloatTensor of size 1 (GPU 0)], Variable containing:
  0.4781
 [torch.cuda.FloatTensor of size 1 (GPU 0)], Variable containing:
  0.4887
 [torch.cuda.FloatTensor of size 1 (GPU 0)], Variable containing:
  0.4887
 [torch.cuda.FloatTensor of size 1 (GPU 0)], Variable containing:
  0.4887
 [torch.cuda.FloatTensor of size 1 (GPU 0)], Variable containing:
  0.4887
 [torch.cuda.FloatTensor of size 1 (GPU 0)], Variable containing:
  0.4887
 [torch.cuda.FloatTensor of size 1 (GPU 0)], Variable containing:
  0.4887
 [torch.cuda.FloatTensor of size 1 (GPU 0)], Variable containing:
  0.4887
 [torch.cuda.FloatTensor of size 1 (GPU 0)], Variable containing:
  0.4887
 [torch.cuda.FloatTensor of size 1 (GPU 0)], Variable containing:
  0.4781
 [torch.cuda.FloatTensor of size 1 (GPU 0)], Variable containing:
  0.4887
 [torch.cuda.FloatTensor of size 1 (GPU 0)], Variable containing:
  0.4781
 [torch.cuda.FloatTensor of size 1 (GPU 0)]]